main/interfaces/Plush/templates/static/stylesheets/plush-default.css
/* ... */
#config_nav_scheduling	{ background-image: url(../images/plush-default/config/scheduling.png); }
#config_nav_rss 		{ background-image: url(../images/plush-default/config/rss.png); }
#config_nav_email		{ background-image: url(../images/plush-default/config/email.png); }
#config_nav_newzbin		{ background-image: url(../images/plush-default/config/newzbin.png); }


#config_content legend {
	background-position: 2% 50%;
	background-repeat: no-repeat;
	border: 1px solid white;
	padding:0px;
	padding-left:32px;
	padding-right:4px;
	font-size:150%;
	font-weight:bold;
	color:white;
	background-color:#333;
}

#configbox_server_encrypted		{ background-image: url(../images/plush-default/config/encrypted.png); }
#configbox_server_decrypted		{ background-image: url(../images/plush-default/config/decrypted.png); }
#configbox_latest_warnings		{ background-image: url(../images/plush-default/config/messagebox_warning.png); }
#configbox_web_server			{ background-image: url(../images/plush-default/config/server.png); }
#configbox_tuning				{ background-image: url(../images/plush-default/config/kcontrol.png); }
#configbox_user_folders			{ background-image: url(../images/plush-default/config/folder_download.png); }
#configbox_system_folders		{ background-image: url(../images/plush-default/config/folder_tar.png); }
#configbox_sorting_folders		{ background-image: url(../images/plush-default/config/tv.png); }
#configbox_processing_switches	{ background-image: url(../images/plush-default/config/view_multicolumn.png); }
#configbox_other_switches		{ background-image: url(../images/plush-default/config/view_icon.png); }
#configbox_add_server			{ background-image: url(../images/plush-default/config/kgpg_term.png); }
#configbox_add_schedule			{ background-image: url(../images/plush-default/config/klipper.png); }
#configbox_current_schedules	{ background-image: url(../images/plush-default/config/ksysv.png); }
#configbox_new_feed_url			{ background-image: url(../images/plush-default/config/news_subscribe.png); }
#configbox_feed_definition		{ background-image: url(../images/plush-default/config/knode.png); }
#configbox_email_options		{ background-image: url(../images/plush-default/config/mail_generic.png); }
#configbox_email_account_settings{background-image: url(../images/plush-default/config/mail_find.png); }
#configbox_newzbin_account_info	{ background-image: url(../images/plush-default/config/kgpg.png); }
#configbox_bookmark_processing	{ background-image: url(../images/plush-default/config/bookmarks_list_add.png); }



.tucker {width:300px;font-weight:bold;}

.left_links a, .right_links a {
	background-position: 5px 50%;
	background-repeat:no-repeat;
}
#help {
	background-image: url(../images/plush-default/config/help.png);
	padding: 6px;
	padding-left:36px;
	margin-bottom:40px;
}
#force_disconnect {
	background-image: url(../images/plush-default/config/disconnect.png);
	padding: 6px;
	padding-left:36px;
}
#test_email {
	background-image: url(../images/plush-default/config/test_email.png);
	padding: 6px;
	padding-left:36px;
}
#save {
	background-image: url(../images/plush-default/config/save.png);
	padding: 6px;
	padding-left:36px;
}


#config_nzo_reload {
	background-image: url(../images/plush-default/nzo/reload.png);
	cursor:pointer;
}
#config_nzo_delete {
	background-image: url(../images/plush-default/nzo/delete.png);
}
#config_nzo_top {
	background-image: url(../images/plush-default/nzo/top.png);
}
#config_nzo_up {
	background-image: url(../images/plush-default/nzo/up.png);
}
#config_nzo_down {
	background-image: url(../images/plush-default/nzo/down.png);
}
#config_nzo_bottom {
	background-image: url(../images/plush-default/nzo/bottom.png);
}
#config_nzo_select_all {
	background-image: url(../images/plush-default/nzo/select_all.png);
	cursor:pointer;
}
#config_nzo_select_none {
	background-image: url(../images/plush-default/nzo/select_none.png);
	cursor:pointer;
}
#config_nzo_select_invert {
	background-image: url(../images/plush-default/nzo/select_invert.png);
	cursor:pointer;
}




#config_container {
	background: #bbb;
/*	width: 655px; 
	height: 435px; */
	min-height: 435px;
	text-align: left;
	font-size: 10pt;
	padding: 10px;
	padding-left: 20px;
}

#connections_container {
	background: #bbb;
	height: 395px;
	text-align: left;
	font-size: 10pt;
	margin: 10px 10px 0px 10px;
	padding: 10px;
}

#config_content {
	height: 100%;
	width: 100%;
	overflow: auto;
}

.left_links {
	float: left;
	margin: 5px 0 0 10px;
}

.left_links a {
	display: block;
	background-color: #ddd;
	color: #666;
	text-decoration: none;
	font-size: 9pt;
	font-weight: bold;
	padding: 2px 5px;
}

.left_links a:hover {
	background-color: #bbb;
	color: #000;
}

.left_links a img {
	vertical-align: middle;
	padding-right: 5px;
	border-width: 0px;
}

.right_links a {
	cursor:pointer;
}

.config_margin {
	margin: 5px 10px 0 110px;
}

.right_links {
	float: right;
	margin: 5px 10px 0 0;
}

.right_links a {
	display: block;
	background-color: #ddd;
	color: #666;
	text-decoration: none;
	font-size: 9pt;
	font-weight: bold;
	padding: 2px 5px;
}

.right_links a:hover {
	background-color: #bbb;
	color: #000;
}

.right_links a img {
	vertical-align: middle;
	padding-right: 5px;
	border-width: 0px;
}

#save_button {
	float: right;
	margin: 6px 10px 0 0;
}







/* ---------------------------------------------------------------------------------------------------------------
------------------------------------------------------------------------------------------------------------------

	H E L P E R    C L A S S E S

------------------------------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------------------------- */



/* Text align
----------------------------------------------------------- */
.textRight {text-align: right;}
.textLeft {text-align: left;}
.textCenter {text-align: center;}
/* ... */

